@@ -1,3 +1,8 @@
+Sat Feb 23 arton
+ *test/test.rb
+	let test_field metod use Test.class instead of Point.class
+ *test/Test.java
+	add a public field for testing
 Fri Feb 22 arton
  *ext/rjb.c
 	mark version 1.1.3 for the next release.
